--- a/client/webrtc_example.html
+++ b/client/webrtc_example.html
@@ -33,6 +33,7 @@
         <footer>
             Copyright WildDog 2016
         </footer>
+		<script src="adapter.js"></script>
 		<script src="main.js"></script>
 		<script src="https://cdn.wilddog.com/js/client/current/wilddog.js"></script>
     </body>
